[gd_scene load_steps=11 format=3 uid="uid://dkq21lbw5ndo1"]

[ext_resource type="Script" path="res://scenes/gui.gd" id="1_rghob"]
[ext_resource type="Texture2D" uid="uid://vyndo7gksr3f" path="res://gui/play_normal.png" id="1_tv2iy"]
[ext_resource type="Texture2D" uid="uid://jvb0m1ot4t0v" path="res://gui/play_pressed.png" id="2_c5q63"]
[ext_resource type="Texture2D" uid="uid://bx5dsuolslmk2" path="res://gui/down1.png" id="3_prsrk"]
[ext_resource type="Texture2D" uid="uid://cn2nnf7bwaojt" path="res://gui/down2.png" id="4_pi813"]
[ext_resource type="Texture2D" uid="uid://bffv7qppn0nrt" path="res://gui/restart_normal.png" id="6_0hrat"]
[ext_resource type="Texture2D" uid="uid://brlfdfap4rb65" path="res://gui/restart_pressed.png" id="7_6s2tj"]
[ext_resource type="FontFile" uid="uid://bp18k4jms57y5" path="res://font/Bellota-Bold.ttf" id="8_vfso8"]
[ext_resource type="Texture2D" uid="uid://cy1fka8hipseu" path="res://gui/log-out.png" id="9_03wwa"]

[sub_resource type="Theme" id="Theme_okrjm"]
default_font = ExtResource("8_vfso8")
default_font_size = 32

[node name="GUI" type="Node2D"]
script = ExtResource("1_rghob")

[node name="PlayButton" type="TouchScreenButton" parent="."]
z_index = 1
position = Vector2(549, 324)
texture_normal = ExtResource("1_tv2iy")
texture_pressed = ExtResource("2_c5q63")

[node name="Down" type="TouchScreenButton" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(1081, 515)
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("3_prsrk")
texture_pressed = ExtResource("4_pi813")

[node name="RestartButton" type="TouchScreenButton" parent="."]
z_index = 1
position = Vector2(549, 324)
texture_normal = ExtResource("6_0hrat")
texture_pressed = ExtResource("7_6s2tj")

[node name="ScoreText" type="RichTextLabel" parent="."]
offset_left = 25.0
offset_top = 22.0
offset_right = 354.0
offset_bottom = 62.0
theme = SubResource("Theme_okrjm")
text = "Score: 0"
scroll_active = false

[node name="FinalScoreText" type="RichTextLabel" parent="."]
offset_left = 20.0
offset_top = 601.0
offset_right = 349.0
offset_bottom = 641.0
theme = SubResource("Theme_okrjm")
text = "Final score: 0"
scroll_active = false

[node name="Salir" type="TouchScreenButton" parent="."]
texture_filter = 1
position = Vector2(1217, 8)
scale = Vector2(0.0996093, 0.0878906)
texture_normal = ExtResource("9_03wwa")
texture_pressed = ExtResource("9_03wwa")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="released" from="Salir" to="." method="_on_salir_released"]
